# logweb

./: .gitignore  Cargo.toml  LICENSE
common/: Cargo.toml
common/src/: lib.rs
inspector/: Cargo.toml
inspector/assets/css/: base.css
inspector/assets/html/: index.html  logs.html  query.html
inspector/assets/js/: common.js  live.js  logs.js  query.js
inspector/src/: main.rs
spider/: Cargo.toml
spider/src/: database.rs  main.rs
trap/: Cargo.toml
trap-daemon/: Cargo.toml
trap-daemon/src/: main.rs  store.rs  waker.rs
trap-daemon/src/collectors/: mod.rs  systemd.rs
trap/src/: classification.rs  main.rs
