[workspace]
resolver = "3"
members = ["common", "spider", "trap"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
bitcode = "0.6.9"
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
