[workspace]
resolver = "3"
members = ["common", "spider", "trap-daemon"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
rusqlite = { version = "0.40.1", features = ["bundled"] }
