[package]
name = "spider"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
clap.workspace = true
tokio.workspace = true
color-eyre.workspace = true
rusqlite.workspace = true
async-compression = { version = "0.4.42", features = ["tokio", "zstd"] }
rustc-hash = "2.1.2"
